modules/sg/db_sg.tf
resource "aws_security_group" "db_sg" {
  name        = "${var.db_name_prefix}-sg"
  description = "Allow MySQL from API EC2"
  vpc_id      = var.vpc_id

  ingress {
    from_port       = 3306
    to_port         = 3306
    protocol        = "tcp"
    security_groups = [var.api_sg_id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.db_name_prefix}-sg"
  }
}
